@@ -37,7 +37,7 @@ enum STAGE_LIST {
  * @brief
  *
  */
-enum COLISION_TYPES { BLOCK_UNBLOCKED, BLOCK_X, BLOCK_Y, BLOCK_XY, BLOCK_STAIR_X, BLOCK_STAIR_Y, BLOCK_WATER, BLOCK_MOVE_LEFT, BLOCK_MOVE_RIGHT };
+enum COLISION_TYPES { BLOCK_UNBLOCKED, BLOCK_X, BLOCK_Y, BLOCK_XY, BLOCK_STAIR_X, BLOCK_STAIR_Y, BLOCK_WATER, BLOCK_MOVE_LEFT, BLOCK_MOVE_RIGHT, BLOCK_INSIDE_OBJ };
 
 /**
  * @brief
@@ -941,6 +941,7 @@ enum e_SCREEN_GFX {
 #define TOP_STARS_LIMIT 65
 #define BOTTOM_STARS_LIMIT 175
 
+#define CHAR_OBJ_COLISION_KILL_ADJUST 4
 
 //#define SHOW_HITBOXES 1
 
